--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -53,6 +53,9 @@ bind_statistics_host: 127.0.0.1
 bind_statistics_allow:
   - "127.0.0.1"
 
+# Add custom line
+bind_option_raw: ""
+
 # Enable geoip module
 bind_geoip_enabled: false
 
